--- a/config_sample.env
+++ b/config_sample.env
@@ -6,32 +6,32 @@ _____REMOVE_THIS_LINE_____=True
 ## Rest of variable can be setup using BOT by /bsetting command
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "6149837385:AAH-wA665ydMIVWqB-wgxbHRoIjHjcrqbtU"
+OWNER_ID = 942140808
+TELEGRAM_API = 25754796
+TELEGRAM_HASH = "8919c4b0fcfd3fa4e8929a64dab80265"
 
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
+GDRIVE_ID = "1sY1zZPjG4fcKeXezhHoNlm8EH4xUPwwE"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "20"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
-DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
-SUDO_USERS = ""
-IGNORE_PENDING_REQUESTS = ""
-IS_TEAM_DRIVE = ""
-USE_SERVICE_ACCOUNTS = ""
+DATABASE_URL = "postgres://wzwwplok:0uEmrxBfx1u3RYjdzJc26LKw-zg0E29u@kandula.db.elephantsql.com/wzwwplok"
+AUTHORIZED_CHATS = "-1001934445225"
+SUDO_USERS = "1859872227 1736702495 1015200442"
+IGNORE_PENDING_REQUESTS = "True"
+IS_TEAM_DRIVE = "True"
+USE_SERVICE_ACCOUNTS = "False"
 SA_MAIL = ""                                          # SA Email id To display in USER TD Section
-INDEX_URL = ""                                        # Not end with /
+INDEX_URL = "https://cl.centrallinksautoleech6727.workers.dev/1:"                                        # Not end with /
 STATUS_LIMIT = "2"                                    # Recommended Value : 2 (If Using PICS)
 STOP_DUPLICATE = ""
 CMD_SUFFIX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
 EXTENSION_FILTER = ""
-INCOMPLETE_TASK_NOTIFIER = ""
+INCOMPLETE_TASK_NOTIFIER = "True"
 TGH_THUMB = ""                                        # Give Telegraph URL(graph.org) for Logs/File Thumbnail
 
 # TURN ON/OFF FUCTIONS
